@@ -12,6 +12,9 @@ with their complete changes, see the AUTHORS file.
 
 * Changes in Cdecl 11.14
 
+** `east-const` in K&R C
+Now prints a warning that `east-const` isn't supported until C89.
+
 ** Fixed `void f(int())`
 The long-standing issue <https://github.com/paul-j-lucas/cdecl/issues/10> has
 finally been fixed.
